package com.sunrise.dental.model;

public enum AppointmentStatus {
    SCHEDULED,
    COMPLETED,
    CANCELLED
}
