package com.sunrise.dental.model;

public enum Role {
    ADMIN,
    STAFF
}
